force-app/main/default/objects/Filial__c/Filial__c.object-meta.xml
<CustomObject>
    <label>Filial</label>
    <nameField>
        <label>Nombre de Filial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filiales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>