force-app/main/default/objects/Filial__c/fields/Coordinador__c.field-meta.xml
<CustomField>
    <fullName>Coordinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filiales</relationshipName>
    <type>Lookup</type>
</CustomField>