force-app/main/default/objects/Filial__c/fields/Deposito__c.field-meta.xml
<CustomField>
    <fullName>Deposito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depósito</label>
    <type>Checkbox</type>
</CustomField>