force-app/main/default/objects/Filial__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>